--- a/UITest_3/Base.lproj/Main.storyboard
+++ b/UITest_3/Base.lproj/Main.storyboard
@@ -20,18 +20,25 @@
                                 <rect key="frame" x="40" y="94" width="334" height="708"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xP-3Z-WNb">
-                                        <rect key="frame" x="146.5" y="0.0" width="41.5" height="20.5"/>
+                                        <rect key="frame" x="146.5" y="0.0" width="41.5" height="480"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nnf-ne-LmZ">
-                                        <rect key="frame" x="151" y="104.5" width="32" height="488.5"/>
+                                        <rect key="frame" x="132" y="564" width="70" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="U68-uI-e44"/>
+                                            <constraint firstAttribute="width" constant="70" id="YEA-qv-S4e"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7CX-ML-3AI">
-                                        <rect key="frame" x="133.5" y="677" width="67" height="31"/>
+                                        <rect key="frame" x="133.5" y="678" width="67" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="l91-E0-Mlb"/>
+                                        </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="gray" title="Button"/>
                                         <connections>
