--- a/UITest_3/Base.lproj/Main.storyboard
+++ b/UITest_3/Base.lproj/Main.storyboard
@@ -12,30 +12,34 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="NewViewController" customModule="UITest_3" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="84" translatesAutoresizingMaskIntoConstraints="NO" id="pqC-hI-j9d">
-                                <rect key="frame" x="40" y="94" width="334" height="708"/>
+                                <rect key="frame" x="40" y="94" width="334" height="293"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xP-3Z-WNb">
-                                        <rect key="frame" x="146.5" y="0.0" width="41.5" height="480"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xP-3Z-WNb">
+                                        <rect key="frame" x="42" y="0.0" width="250" height="70"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="FFW-ry-xKI"/>
+                                            <constraint firstAttribute="height" constant="70" id="sC5-gm-Lqw"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nnf-ne-LmZ">
-                                        <rect key="frame" x="132" y="564" width="70" height="30"/>
+                                        <rect key="frame" x="42" y="154" width="250" height="25"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="U68-uI-e44"/>
-                                            <constraint firstAttribute="width" constant="70" id="YEA-qv-S4e"/>
+                                            <constraint firstAttribute="height" constant="25" id="6nD-X7-MDW"/>
+                                            <constraint firstAttribute="width" constant="250" id="e6q-le-1Mc"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7CX-ML-3AI">
-                                        <rect key="frame" x="133.5" y="678" width="67" height="30"/>
+                                        <rect key="frame" x="133.5" y="263" width="67" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="l91-E0-Mlb"/>
                                         </constraints>
